fix(design): Support modal (dialog) over sticky header z-index: 2

--- a/libraries/design/src/styles/main.scss
+++ b/libraries/design/src/styles/main.scss
@@ -455,6 +455,7 @@ tr.is-sticky-row :is(td, th),
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 
   &[data-entering] {
     animation: fade 200ms;
